--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@webpack-cli/init": "^0.3.0",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
